<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etNameField"
            style="@style/etField"
            android:hint="@string/name"
            android:inputType="textCapWords"
            app:endIconMode="clear_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_baseline_person_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                style="@style/editText"
                android:inputType="textCapWords"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etEmailField"
            style="@style/etField"
            android:hint="@string/email"
            app:endIconMode="clear_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etNameField"
            app:startIconDrawable="@drawable/ic_baseline_email_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                style="@style/editText"
                android:inputType="textEmailAddress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etNameField" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPhoneField"
            style="@style/etField"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/phone"
            app:endIconMode="clear_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etEmailField"
            app:startIconDrawable="@drawable/ic_baseline_phone_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhone"
                style="@style/editText"
                android:layout_weight="1"
                android:inputType="number"
                android:maxLength="10"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etEmailField" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etAddressField"
            style="@style/etField"
            android:hint="@string/Address"
            app:endIconMode="clear_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etPhoneField"
            app:startIconDrawable="@drawable/ic_baseline_home_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAddress"
                style="@style/editText"
                android:inputType="textPostalAddress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etPhoneField" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etBloodGroupField"
            style="@style/etDropDownField"
            android:hint="@string/blood_group"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etAddressField"
            app:startIconDrawable="@drawable/ic_baseline_bloodtype_24">

            <AutoCompleteTextView
                android:id="@+id/ac_txtBloodGroup"
                style="@style/editText"
                android:dropDownWidth="wrap_content"
                android:inputType="none"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etAddressField"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etDateField"
            style="@style/etField"
            android:hint="@string/DOB"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etBloodGroupField"
            app:startIconDrawable="@drawable/ic_baseline_date_range_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDate"
                style="@style/editText"
                android:focusable="false"
                android:inputType="date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etBloodGroupField" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/txtGender"
            style="@style/main_text"
            android:text="@string/gender"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etDateField" />

        <RadioGroup
            android:id="@+id/rgButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtGender">

            <RadioButton
                android:id="@+id/rbMale"
                style="@style/rbStyle"
                android:button="@drawable/ic_male"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/rbFemale"
                style="@style/rbStyle"
                android:button="@drawable/ic_female"
                android:text="@string/female" />
        </RadioGroup>

        <ImageView
            android:id="@+id/imgLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:src="@drawable/ic_language"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rgButton"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/txtLanguage"
            style="@style/main_text"
            android:text="@string/known_language"
            app:layout_constraintStart_toEndOf="@id/imgLanguage"
            app:layout_constraintTop_toBottomOf="@id/rgButton" />


        <CheckBox
            android:id="@+id/checkEnglish"
            style="@style/checkStyle"
            android:text="@string/english"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgLanguage" />

        <CheckBox
            android:id="@+id/checkHindi"
            style="@style/checkStyle"
            android:text="@string/hindi"
            app:layout_constraintStart_toEndOf="@id/checkEnglish"
            app:layout_constraintTop_toBottomOf="@id/imgLanguage" />

        <CheckBox
            android:id="@+id/checkGujarati"
            style="@style/checkStyle"
            android:text="@string/gujarati"
            app:layout_constraintStart_toEndOf="@id/checkHindi"
            app:layout_constraintTop_toBottomOf="@id/imgLanguage" />


        <Button
            android:id="@+id/btnSave"
            style="@style/btnStyle"
            android:layout_gravity="center"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkEnglish" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>