<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin"
    android:background="@drawable/row_border">

    <TextView
        android:id="@+id/txtName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/margin"
        android:layout_toStartOf="@+id/imgBtnMenu"
        android:padding="@dimen/padding"
        android:text="@string/name"
        android:textColor="@color/purple_200"
        android:textSize="@dimen/textSize"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtName"
        android:layout_toStartOf="@+id/imgBtnMenu"
        android:layout_alignParentStart="true"
        android:padding="@dimen/padding"
        android:layout_marginStart="@dimen/margin"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="@dimen/txt_size" />


    <ImageButton
        android:id="@+id/imgBtnMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/margin1"
        android:layout_marginTop="@dimen/margin1"
        android:layout_marginEnd="@dimen/margin1"
        android:layout_marginBottom="@dimen/margin1"
        android:background="@android:color/transparent"
        android:contentDescription="@string/edit"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:padding="@dimen/padding"
        android:src="@drawable/ic_more"
        tools:ignore="ImageContrastCheck" />

</RelativeLayout>